fix: horizontal scroll

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header {
   right: 0;
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 nav {
   display: flex;
@@ -302,17 +303,16 @@ main {
   font-size: 12px;
 }
 .main-container {
-  position: absolute;
   display: flex;
   width: 100%;
   margin-top: 100px;
-  margin-left: 12%;
+  max-width: 1110px;
+  margin: 100px auto 0;
 }
 
 .banner {
   position: relative;
-  /* top: 150px; */
-  margin-top: 150px;
+  margin-top: 60px;
 }
 .img-wrapper img {
   min-height: 360px;
